multiple file upload complete

--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "date-fns": "^2.30.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "formidable": "^3.5.0",
+    "mime": "^3.0.0",
     "next": "13.4.10",
+    "pdfreader": "^3.0.0",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
