--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "formidable": "^3.5.0",
     "mime": "^3.0.0",
     "next": "13.4.10",
+    "openai": "^3.3.0",
     "pdfreader": "^3.0.0",
     "postcss": "8.4.26",
     "react": "18.2.0",
