--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "mime": "^3.0.0",
     "next": "13.4.10",
     "openai": "^3.3.0",
-    "pdfreader": "^3.0.0",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/formidable": "^3.4.0",
+    "@types/mime": "^3.0.1",
+    "pdfreader": "^3.0.0"
   }
 }
