--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gpt": "node gpt.js"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.0.6",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
