--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "18.2.0",
     "react-export-table-to-excel": "^1.0.6",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/formidable": "^3.4.0",
