--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
-    "cypress": "^12.17.1",
+    // "cypress": "^12.17.1",
     "date-fns": "^2.30.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
